fixed-weird-spacing-issue-because-of-sticky-position-ele

--- a/react-app/src/components/PostDetails/PostDetails.css
+++ b/react-app/src/components/PostDetails/PostDetails.css
@@ -1,4 +1,6 @@
 #post-details-outer{
+    display: flex;
+    flex-direction: column;
     background-image: url('https://aws-starter-bucket123.s3.amazonaws.com/imgur-background.png');
     background-repeat: repeat-x;
 }
@@ -18,10 +20,10 @@
 #post-details-votes-container{
     width: 60px;
     position: sticky;
-    top: 45%;
+    top: 30%;
     left: 25%;
-    height: auto;
-    box-sizing: content-box;
+    height: 0px;
+    overflow: visible;
 }
 
 #post-details-votes{
@@ -58,7 +60,8 @@
 }
 
 #post-details{
-    min-height: 80vh;
+    display: flex;
+    flex-direction: column;
 }
 
 #post-details-main-container{
@@ -176,9 +179,10 @@
 #explore-posts-text{
     display: flex;
     justify-content: center;
-    padding-top: 60px;
+    padding-top: 160px;
     font-size: 20px;
     font-weight: bold;
+
 }
 
 .upvoted > i{
